Update api.yaml (api), fixed forward, reactions and auto-refresh (frontend) and error in go (backend)
